<resources>
    <string name="app_name">AG5S Management System</string>

    <!--LOGIN-->
    <string name="branch">---</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">LOGIN</string>
    <string name="cibatok">CIBATOK</string>
    <string name="cikampak">CIKAMPAK</string>

    <string name="no1">1.</string>
    <string name="x">X</string>
    <string name="rp0">Rp 0</string>
    <string name="startDate">Dari Tanggal :</string>
    <string name="endDate">Sampai Tanggal :</string>
    <string name="rekapPenjualan">Rekap Penjualan</string>

    <string name="transaksi">Jml Transaksi</string>
    <string name="subtotalDate">Subtotal (Rp)</string>
    <string name="date">Tanggal</string>
    <string name="semicolon">:</string>

    <!--DASHBOARD-->
    <string name="dashboard">Dashboard</string>
    <string name="makanan">Daftar Menu</string>
    <string name="bahanBaku">Bahan Baku</string>
    <string name="kasir">Kasir</string>
    <string name="pengeluaran">Pengeluaran</string>

    <string name="pesanan">Pesanan</string>
    <string name="belanja">Belanja</string>
    <string name="laporan">Laporan</string>
    <string name="hakAkses">Hak Akses</string>

    <!--Foods-->
    <string name="daftarMakanan">DAFTAR MENU</string>
    <string name="harga">Harga :</string>
    <string name="harga_satuan">Harga Satuan :</string>
    <string name="kategori">Kategori :</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--Menu-->
    <string name="foodMenuEditName">Ubah Nama</string>
    <string name="foodMenuEditPrice">Ubah Harga</string>
    <string name="foodMenuDelete">Hapus</string>
    <string name="foodMenuEditQty">Ubah Qty</string>
    <!--Food Menu-->
    <string name="cat_1">Makanan</string>
    <string name="cat_2">Minuman</string>
    <string name="cat_3">Tambahan</string>

    <!--SUPPLIES Type-->
    <string name="core">Bahan Pokok</string>
    <string name="ingredients">Bumbu Dapur</string>

    <!--Supplies Units Type-->
    <string name="kg">Kilo Gram (Kg)</string>
    <string name="gr">Gram (Gr)</string>
    <string name="ons">Ons</string>

    <string name="kwintal">Kwintal</string>
    <string name="karung">Karung</string>
    <string name="liter">Liter</string>

    <string name="dus">Dus / Ball</string>
    <string name="potong">Potong</string>
    <string name="lainLain">Lain lain</string>

    <!--CART ACTIVITY-->
    <string name="header_cart">List Menu Pesanan</string>
    <string name="subtotalprice_cart">Subtotal Pembayaran :</string>
    <string name="subtotalqty_cart">Total Item (Qty):</string>
    <string name="confirm_cart">Konfirmasi Pesanan</string>
    <string name="subtotal">Subtotal :</string>
    <string name="custName">Nama Pemesan</string>
    <string name="typeOrder">Tipe Pesanan :</string>
    <string name="dineIn">Dine In</string>
    <string name="takeAway">Take Away</string>
    <string name="typeCustomer">Kategori Pelanggan : </string>
    <string name="umum">Umum</string>
    <string name="online">Online (Ojol)</string>
    <string name="karyawan">Karyawan</string>
    <string name="kerabat">Kerabat/Tetangga</string>

    <!--CASHIER-->
    <string name="headerCashier">Daftar Transaksi Penjualan</string>

    <!--HISTORY TYPE-->
    <string name="historyType1">Penjualan Harian</string>
    <string name="historyType2">Pengeluaran (Belanja Persediaan)</string>
    <string name="historyType3">Pengeluaran Rutin (Non Belanja)</string>
    <string name="historyType4">Transaksi Cancel / Gantung</string>

    <string name="detailItemPesanan">Detail Item Pesanan</string>
    <string name="historyPendapatan">Histori Pendapatan (Penjualan)</string>
    <string name="historyPengeluaranSupplies">Histori Pengeluaran (Belanja Persediaan)</string>
    <string name="historyPengeluaranNonSupplies">Histori Pengeluaran (Non Belanja)</string>

</resources>