<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtRVHistoryCashInOrderItemsNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/no1"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtRVHistoryCashInOrderItemsNameFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/cat_1"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/txtRVHistoryCashInOrderItemsNumber"
            app:layout_constraintStart_toEndOf="@+id/txtRVHistoryCashInOrderItemsNumber"
            app:layout_constraintTop_toTopOf="@+id/txtRVHistoryCashInOrderItemsNumber" />

        <TextView
            android:id="@+id/textView67"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/x"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="8sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/txtRVHistoryCashInOrderItemsQty"
            app:layout_constraintStart_toEndOf="@+id/txtRVHistoryCashInOrderItemsNameFood"
            app:layout_constraintTop_toTopOf="@+id/txtRVHistoryCashInOrderItemsQty" />

        <TextView
            android:id="@+id/txtRVHistoryCashInOrderItemsQty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="1"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/txtRVHistoryCashInOrderItemsNameFood"
            app:layout_constraintStart_toEndOf="@+id/textView67"
            app:layout_constraintTop_toTopOf="@+id/txtRVHistoryCashInOrderItemsNameFood" />

        <TextView
            android:id="@+id/txtRVHistoryCashInOrderItemsTotalBill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/rp0"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/txtRVHistoryCashInOrderItemsQty"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtRVHistoryCashInOrderItemsQty" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>