<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/blue">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/txtRVHistoryCashInNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:text="1."
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView65"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/date"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/txtRVHistoryCashInNumber"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView68"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/transaksi"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/textView65"
            app:layout_constraintTop_toBottomOf="@+id/textView65" />

        <TextView
            android:id="@+id/textView72"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/subtotalDate"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/textView68"
            app:layout_constraintTop_toBottomOf="@+id/textView68" />

        <TextView
            android:id="@+id/textView73"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/semicolon"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/textView65"
            app:layout_constraintStart_toEndOf="@+id/textView65"
            app:layout_constraintTop_toTopOf="@+id/textView65" />

        <TextView
            android:id="@+id/textView74"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/semicolon"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/textView68"
            app:layout_constraintStart_toStartOf="@+id/textView73"
            app:layout_constraintTop_toTopOf="@+id/textView68" />

        <TextView
            android:id="@+id/textView75"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/semicolon"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/textView74"
            app:layout_constraintTop_toTopOf="@+id/textView72" />

        <TextView
            android:id="@+id/txtRVHistoryCashInDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="TextView"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView73"
            app:layout_constraintStart_toEndOf="@+id/textView73"
            app:layout_constraintTop_toTopOf="@+id/textView73" />

        <TextView
            android:id="@+id/txtRVHistoryCashInTotalTransaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/textView74"
            app:layout_constraintStart_toStartOf="@+id/txtRVHistoryCashInDate"
            app:layout_constraintTop_toTopOf="@+id/textView74" />

        <TextView
            android:id="@+id/txtRVHistoryCashInTotalBill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/textView75"
            app:layout_constraintStart_toStartOf="@+id/txtRVHistoryCashInTotalTransaction"
            app:layout_constraintTop_toTopOf="@+id/textView75" />

        <ImageView
            android:id="@+id/imgRVHistoryCashInOpen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_eye_24_blue" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>